Create main and footer section for the webpage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400&family=Yellowtail&display=swap"
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Patrick+Hand&family=Work+Sans:wght@100;200;400&family=Yellowtail&display=swap"
     rel="stylesheet">
 </head>
 
@@ -33,8 +37,96 @@
     <hr>
   </header>
   <main>
+    <h2>Chocolate Pizza</h2>
+    <div class="print-text">
+      <p>POSTED ON 15 DEC 2013 / DESSERTS</p>
+      <div>
+        <img src="img/print-icon.png" alt="">
+        <span>Print</span>
+      </div>
+    </div>
+    <img src="img/choco-pizza.png" alt="">
+    <section class="text">
+      <p class="paragraph1">For the fig-swirl: Melt butter over medium heat in a saucepan.Add brown sugar and stir to
+        dissolve.Halve all of the figure and toss in the saucepan with water and lemon juice. Cook over medium heat,
+        stirringfrequently, intil you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let
+        cool completly.</p>
+      <p class="paragraph2">Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar
+        is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolk. Set mixture in the
+        fridgeand waut until the fig mixture is cooled.</p>
+      <p class="paragraph2">Using an ice cream machine, pour liquids into the frozen basin and process according to
+        manufacturer
+        instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the
+        nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware.
+        Freeze for at least two hours before serving.</p>
+    </section>
+    <section>
+      <img src="img/list-bg.png" alt="list-bg">
+      <div class="checklist">
+        <form>
+          <ul>
+            <li><input type="checkbox" name="milk" value="milk">
+              <label for="milk"> 1 1/2 cups milk</label><br>
+            </li>
+            <li><input type="checkbox" name="mascarpone" value="mascarpone">
+              <label for="mascarpone"> 1/2 cup mascarpone</label><br>
+            </li>
+            <li><input type="checkbox" name="salt" value="salt">
+              <label for="salt"> 1/2 tsp pink salt</label><br>
+            </li>
+            <li><input type="checkbox" name="Mission" value="Mission">
+              <label for="Mission"> 1 lb Black Mission</label><br>
+            </li>
+            <li><input type="checkbox" name="sugar" value="sugar">
+              <label for="sugar"> 1/2 cup brown sugar</label><br>
+            </li>
+            <li><input type="checkbox" name="water" value="water">
+              <label for="water"> 2-4 tbsp water</label><br><br>
+            </li>
+          </ul>
+        </form>
+        <form>
+          <ul>
+            <li><input type="checkbox" name="cream" value="cream">
+              <label for="cream"> 1 1/2 cups heavy cream</label><br>
+            </li>
+            <li><input type="checkbox" name="granulated-sugar" value="granulated-sugar" checked>
+              <label class="checked" for="granulated-sugar"> 1/3 granulated sugar</label><br>
+            </li>
+            <li><input type="checkbox" name="egg" value="egg" checked>
+              <label class="checked" for="egg"> 2 egg yolks</label><br>
+            </li>
+            <li><input type="checkbox" name="juiced" value="juiced">
+              <label for="juiced"> 1 lemon, juiced</label><br>
+            </li>
+            <li><input type="checkbox" name="butter" value="butter">
+              <label for="butter"> 2 tbsp butter</label><br>
+            </li>
+            <li><input type="checkbox" name="honey" value="honey">
+              <label for="honey"> 1 cup honey roasted pecans, roughly
+                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;chopped</label><br><br>
+            </li>
+          </ul>
+        </form>
+      </div>
+    </section>
+    <hr>
+    <section class="feedback">
+      <div><img src="img/van-pic.png" alt="van-pic"></div>
+      <div>
+        <h3>Vanessa Stevenson</h3>
+        <p>Food enthusiast, photography fan. Add a Pinch of raw foodism and that's <br>pretty much who I
+          am.</p>
+      </div>
+      <button>SHARE RICEPE</button>
+    </section>
   </main>
-  <footer></footer>
+  <footer>
+    <hr>
+    <img src="img/logo.png" alt="logo">
+    <p class="foot-text">Delicious © 2013. All Rights Reserved.</p>
+    <p class="foot-text">Proudly published with Ghost.</p>
+  </footer>
 </body>
 
 </html>
