--- a/index.html
+++ b/index.html
@@ -65,44 +65,44 @@
       <div class="checklist">
         <form>
           <ul>
-            <li><input type="checkbox" name="milk" value="milk">
+            <li><input type="checkbox" name="milk" id="milk">
               <label for="milk"> 1 1/2 cups milk</label><br>
             </li>
-            <li><input type="checkbox" name="mascarpone" value="mascarpone">
+            <li><input type="checkbox" name="mascarpone" id="mascarpone">
               <label for="mascarpone"> 1/2 cup mascarpone</label><br>
             </li>
-            <li><input type="checkbox" name="salt" value="salt">
+            <li><input type="checkbox" name="salt" id="salt">
               <label for="salt"> 1/2 tsp pink salt</label><br>
             </li>
-            <li><input type="checkbox" name="Mission" value="Mission">
+            <li><input type="checkbox" name="Mission" id="Mission">
               <label for="Mission"> 1 lb Black Mission</label><br>
             </li>
-            <li><input type="checkbox" name="sugar" value="sugar">
+            <li><input type="checkbox" name="sugar" id="sugar">
               <label for="sugar"> 1/2 cup brown sugar</label><br>
             </li>
-            <li><input type="checkbox" name="water" value="water">
+            <li><input type="checkbox" name="water" id="water">
               <label for="water"> 2-4 tbsp water</label><br><br>
             </li>
           </ul>
         </form>
         <form>
           <ul>
-            <li><input type="checkbox" name="cream" value="cream">
+            <li><input type="checkbox" name="cream" id="cream">
               <label for="cream"> 1 1/2 cups heavy cream</label><br>
             </li>
-            <li><input type="checkbox" name="granulated-sugar" value="granulated-sugar" checked>
+            <li><input type="checkbox" name="granulated-sugar" id="granulated-sugar" checked>
               <label class="checked" for="granulated-sugar"> 1/3 granulated sugar</label><br>
             </li>
-            <li><input type="checkbox" name="egg" value="egg" checked>
+            <li><input type="checkbox" name="egg" id="egg" checked>
               <label class="checked" for="egg"> 2 egg yolks</label><br>
             </li>
-            <li><input type="checkbox" name="juiced" value="juiced">
+            <li><input type="checkbox" name="juiced" id="juiced">
               <label for="juiced"> 1 lemon, juiced</label><br>
             </li>
-            <li><input type="checkbox" name="butter" value="butter">
+            <li><input type="checkbox" name="butter" id="butter">
               <label for="butter"> 2 tbsp butter</label><br>
             </li>
-            <li><input type="checkbox" name="honey" value="honey">
+            <li><input type="checkbox" name="honey" id="honey">
               <label for="honey"> 1 cup honey roasted pecans, roughly
                 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;chopped</label><br><br>
             </li>
@@ -122,8 +122,11 @@
     </section>
   </main>
   <footer>
-    <hr>
-    <img src="img/logo.png" alt="logo">
+    <div>
+      <hr>
+      <hr>
+    </div>
+    <img src="img/small-logo.png" alt="logo">
     <p class="foot-text">Delicious © 2013. All Rights Reserved.</p>
     <p class="foot-text">Proudly published with Ghost.</p>
   </footer>
